--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,34 @@
+.split-container {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .split-item {
+    width: 50%;
+    float: left;
+  }
+  
+  .split-item-left {
+    position: relative;
+    z-index: 1;
+  }
+  
+  .split-item-right {
+    position: relative;
+  }
+  
+  .split-item-left:after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -7%;
+    bottom: 0;
+    width: 14%;
+    background: white;
+    transform: skewX(-8deg);
+    z-index: 2;
+  }
+  
 .carousel.slide.carousel.slide.bot{
     display: none;
 }
